Added a comment bro.

--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,5 @@
 lib/generated_plugin_registrant.dart
 
 # Exceptions to above rules.
+# Exeptions are always there.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
