Talk on android

--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -2,3 +2,6 @@ org.gradle.jvmargs=-Xmx1536M
 android.enableR8=true
 android.useAndroidX=true
 android.enableJetifier=true
+android is very good
+one must try it 
+you wil learn very much
