--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Miscellaneous
 *.class
 *.log
+
 *.pyc
 *.swp
 .DS_Store
@@ -16,6 +17,8 @@
 .idea/
 
 # The .vscode folder contains launch configuration and tasks you configure in
+#VS CODE STANDS FOR VISUAL STUDIO CODE 
+
 # VS Code which you may wish to be included in version control, so this line
 # is commented out by default.
 #.vscode/
